# LearningNote

./: .gitignore  CMakeLists.txt  README.md
Sources/RenderObj/: Cube.cpp  Cube.h  IRenderObj.h  Plane.cpp  Plane.h  Rect.cpp  Rect.h
Sources/util/: Camera.h  FileSystem.h  LoadTexture.h  Shader.h
WinOpenGLConfig/OpenGLDemo1/: OpenGLDemo1.sln
WinOpenGLConfig/OpenGLDemo1/OpenGLDemo1/: OpenGLDemo1.vcxproj  OpenGLDemo1.vcxproj.filters  main.cpp
WinOpenGLConfig/OpenGLDemo1/OpenGLDemo1/Thrid/glad/include/glad/: glad.h
WinOpenGLConfig/OpenGLDemo1/OpenGLDemo1/Thrid/glad/src/: glad.c
